tests/fixtures/invalid/store_after_dealloc.nl
fn main -> void
    let ptr ptr_i64 = alloc(1)
    dealloc(ptr)
    store(ptr, 2)
